--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^0.15.2"
+    "cheerio": "^0.22.0",
+    "superagent": "^3.0.0"
   },
   "devDependencies": {
     "babel-core": "^6.18.2",
