--- a/package.json
+++ b/package.json
@@ -12,9 +12,5 @@
     "cheerio": "^0.22.0",
     "superagent": "^3.0.0"
   },
-  "devDependencies": {
-    "babel-core": "^6.18.2",
-    "babel-loader": "^6.2.8",
-    "webpack": "^1.13.3"
-  }
+  "devDependencies": {}
 }
