--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "cheerio": "^0.22.0",
+    "jsdom": "^9.8.3",
     "superagent": "^3.0.0"
   },
   "devDependencies": {}
